[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/level_selector.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.478431, 0, 1, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -4.0
margin_top = 80.0
margin_right = 37.0
margin_bottom = 94.0
rect_scale = Vector2( 3, 3 )
text = "Stages"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -77.5
margin_right = 29.0
margin_bottom = 77.5
custom_constants/separation = 25

[node name="1" type="Button" parent="VBoxContainer"]
margin_right = 58.0
margin_bottom = 20.0
custom_constants/hseparation = 0
text = "Stage 1"

[node name="2" type="Button" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 58.0
margin_bottom = 65.0
text = "Stage 2"

[node name="3" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 58.0
margin_bottom = 110.0
text = "Stage 3"

[node name="4" type="Button" parent="VBoxContainer"]
margin_top = 135.0
margin_right = 58.0
margin_bottom = 155.0
text = "Stage 4"

[connection signal="pressed" from="VBoxContainer/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="VBoxContainer/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="VBoxContainer/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="VBoxContainer/4" to="." method="_on_4_pressed"]
