extends Control



func _on_1_pressed():
	get_tree().change_scene("res://scenes/Level 1.tscn")


func _on_2_pressed():
	get_tree().change_scene("res://scenes/Level 2.tscn")



func _on_3_pressed():
	get_tree().change_scene("res://scenes/Level 3.tscn")


func _on_4_pressed():
	get_tree().change_scene("res://scenes/Level 4.tscn")
